# littledaisy_LittleDaisiesMKII_ME462

./: README.MD  README.md
camera_calibration/: README.md
camera_calibration/calibration_v1/: calibrate.py  capture.py  diagnose.py  preview.py
camera_calibration/calibration_v2/: live_calibrate.py
camera_calibration/preview_test/: calibration_deneme2.json  calibration_live.json  preview.py
draw_detector/: README.md
draw_detector/draw_detector_v1/: camera.py
draw_detector/draw_detector_v2/: config.py  frame_detector_fena_degil.py  visualizer.py
head_proje_v1/robot_head_project/: config.py  main.py  visualizer.py
head_proje_v2/microcontrollerside/: arm_controller.py  config.py  face_renderer.py  main.py
head_proje_v2/robot_head_project/: visualizer.py
head_proje_v3/robot_head_project/: config.py
head_proje_v4/microcontrollerside/: head_controller.py  rp2350_touch_lcd_128.py
head_proje_v4/robot_head_project/: camera.py  config.py  main.py
head_proje_v5/robot_head_project/: camera.py  config.py  requirements.txt
head_project/: README.md
head_project/head_project_v10_gestures/: CHANGES_V10.md  (+2 more)
head_project/head_project_v15_ros2_docker_ready/ros2_ws/src/robot_head_ros/: package.xml  setup.cfg  setup.py
head_project/head_project_v15_ros2_docker_ready/ros2_ws/src/robot_head_ros/config/: robot_head.yaml
head_project/head_project_v15_ros2_docker_ready/ros2_ws/src/robot_head_ros/launch/: robot_head.launch.py
head_project/head_project_v15_ros2_docker_ready/ros2_ws/src/robot_head_ros/robot_head_ros/: __init__.py  bridge_client.py  robot_head_node.py
(+291 files in other folders)
