<?xml version="1.0"?>
<package format="3">
  <name>robot_head_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge for the Little Daisy robot head host controller.</description>
  <maintainer email="maintainer@example.com">Little Daisy Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
